--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -1,7 +1,8 @@
 
-        \begin{table*}
-            \centering
-            \begin{tabular}{lr}
+    \begin{table*}
+        \centering
+        \begin{tabular}{p{12cm}r}r}
+\hline
 \hline
  features                                                                                                                           &    R2 \\
 \hline
@@ -18,7 +19,8 @@
  ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2']          & 81.61 \\
 \hline
 \end{tabular}
-            \caption{Results of Backward Feature Elimination}
-            \label{table-backward}
-        \end{table*}
-        
+\hline
+        \caption{Results of Backward Feature Elimination}
+        \label{backward}
+    \end{table*}
+    
