--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -1,7 +1,8 @@
 
-        \begin{table*}
-            \centering
-            \begin{tabular}{lr}
+    \begin{table*}
+        \centering
+        \begin{tabular}{p{12cm}r}r}
+\hline
 \hline
  features                                                                           &    R2 \\
 \hline
@@ -47,7 +48,8 @@
  ['X\_D2', 'Kfluid2', 'conc\_nano2', 'heat\_flux1', 'conc\_nano1', 'Kfluid1']       & 77.34 \\
 \hline
 \end{tabular}
-            \caption{Results of Forward Feature Selection for different features}
-            \label{table-forward}
-        \end{table*}
-        
+\hline
+        \caption{Results of Forward Feature Selection for different features}
+        \label{forward}
+    \end{table*}
+    
