--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -1,7 +1,8 @@
 
-        \begin{table*}
-            \centering
-            \begin{tabular}{lrr}
+    \begin{table*}
+        \centering
+        \begin{tabular}{p{12cm}r}rr}
+\hline
 \hline
  Feature     &   Sensitivity &   Variance \\
 \hline
@@ -17,7 +18,8 @@
  conc\_nano2 &     -11.9773  &    43.7778 \\
 \hline
 \end{tabular}
-            \caption{Results of Jackknife Sensitivity Analysis}
-            \label{table-jackknife}
-        \end{table*}
-        
+\hline
+        \caption{Results of Jackknife Sensitivity Analysis}
+        \label{jackknife}
+    \end{table*}
+    
