--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,7 +1,8 @@
 
-        \begin{table*}
-            \centering
-            \begin{tabular}{lrrrllrr}
+    \begin{table*}
+        \centering
+        \begin{tabular}{p{12cm}r}rrrllrr}
+\hline
 \hline
  model            &   R2 &   MSE &   R2 std & R2 List:                       & hidden sizes   &   total hs &   epochs \\
 \hline
@@ -19,7 +20,8 @@
  Relu2HiddenLayer & 67.1 &  0.29 &     23.4 & [36.3, 75.7, 42.2, 90.9, 90.3] & [8, 4]         &         12 &      100 \\
 \hline
 \end{tabular}
-            \caption{Results of different models}
-            \label{table-models}
-        \end{table*}
-        
+\hline
+        \caption{Results of different models}
+        \label{models}
+    \end{table*}
+    
