--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -1,23 +1,25 @@
 
-        \begin{table*}
-            \centering
-            \begin{tabular}{lr}
+    \begin{table*}
+        \centering
+        \begin{tabular}{p{12cm}r}r}
+\hline
 \hline
  Feature     &   Weight Importance \\
 \hline
- Kfluid2     &            0.543577 \\
- flow\_rate2 &            0.491675 \\
- conc\_nano1 &            0.468493 \\
- X\_D1       &            0.447168 \\
- conc\_nano2 &            0.425318 \\
- flow\_rate1 &            0.392215 \\
- heat\_flux1 &            0.368096 \\
- heat\_flux2 &            0.367584 \\
- Kfluid1     &            0.357384 \\
- X\_D2       &            0.337244 \\
+ conc\_nano2 &            0.543742 \\
+ conc\_nano1 &            0.488296 \\
+ flow\_rate1 &            0.482093 \\
+ Kfluid2     &            0.460234 \\
+ heat\_flux1 &            0.434018 \\
+ flow\_rate2 &            0.417029 \\
+ heat\_flux2 &            0.416402 \\
+ X\_D2       &            0.397723 \\
+ Kfluid1     &            0.381592 \\
+ X\_D1       &            0.322065 \\
 \hline
 \end{tabular}
-            \caption{Results of Weight Analysis}
-            \label{table-weight_analysis}
-        \end{table*}
-        
+\hline
+        \caption{Results of Weight Analysis}
+        \label{weight_analysis}
+    \end{table*}
+    
