--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -4,19 +4,19 @@
         \begin{tabular}{p{12cm}r}r}
 \hline
 \hline
- features                                                                                                                           &    R2 \\
+ features                                                                                            &    R2 \\
 \hline
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2'] & 82.69 \\
- ['conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 62.45 \\
- ['flow\_rate1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 81.63 \\
- ['flow\_rate1', 'conc\_nano1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']            & 73.64 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 72.94 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']          & 67.45 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'conc\_nano2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 68.03 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'Kfluid2', 'heat\_flux2', 'X\_D2']                & 76.57 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'heat\_flux2', 'X\_D2']            & 38.28 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'X\_D2']                & 69.39 \\
- ['flow\_rate1', 'conc\_nano1', 'Kfluid1', 'heat\_flux1', 'X\_D1', 'flow\_rate2', 'conc\_nano2', 'Kfluid2', 'heat\_flux2']          & 81.61 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2 & 84.97 \\
+ conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 71.27 \\
+ flow\_rate1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 71.9  \\
+ flow\_rate1,conc\_nano1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2         & 73.44 \\
+ flow\_rate1,conc\_nano1,Kfluid1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 74.25 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2       & 70.58 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 81.67 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,Kfluid2,heat\_flux2,X\_D2             & 40.24 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,heat\_flux2,X\_D2         & 49.33 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,X\_D2             & 72.42 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2       & 74.5  \\
 \hline
 \end{tabular}
 \hline
