--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -6,18 +6,9 @@
 \hline
  model            &   R2 &   MSE &   R2 std & R2 List:                       & hidden sizes   &   total hs &   epochs \\
 \hline
- Relu2HiddenLayer & 90.6 &  0.08 &      9.9 & [95.2, 92.2, 71.2, 99.0, 95.4] & [15, 10, 3]    &         28 &       50 \\
- Relu2HiddenLayer & 86.3 &  0.12 &      6.4 & [95.7, 79.2, 90.5, 86.8, 79.2] & [15, 10, 3]    &         28 &      200 \\
- Relu2HiddenLayer & 85.8 &  0.12 &      4.9 & [84.1, 85.5, 89.6, 92.0, 77.6] & [15, 10, 3]    &         28 &      100 \\
- Relu2HiddenLayer & 84.3 &  0.14 &     10.5 & [85.9, 64.8, 95.2, 84.6, 91.3] & [8, 4]         &         12 &      200 \\
- Relu2HiddenLayer & 83.6 &  0.14 &      5.1 & [79.4, 80.0, 92.6, 85.8, 80.0] & [15, 5]        &         20 &      200 \\
- Relu2HiddenLayer & 81.7 &  0.16 &     11.5 & [92.2, 93.7, 67.8, 86.7, 68.1] & [15, 5]        &         20 &      100 \\
- Relu2HiddenLayer & 78.5 &  0.19 &     14.6 & [91.6, 62.2, 93.6, 85.4, 59.9] & [8, 4]         &         12 &       20 \\
- Relu2HiddenLayer & 77.2 &  0.2  &     15.2 & [76.4, 51.7, 92.5, 72.6, 93.0] & [15, 10, 3]    &         28 &       20 \\
- Relu2HiddenLayer & 73.6 &  0.23 &     29.8 & [14.3, 86.4, 89.0, 84.5, 93.8] & [15, 5]        &         20 &       50 \\
- Relu2HiddenLayer & 68.5 &  0.28 &     22.6 & [51.4, 47.1, 93.6, 52.0, 98.5] & [15, 5]        &         20 &       20 \\
- Relu2HiddenLayer & 67.9 &  0.28 &     34.1 & [67.5, 95.6, 2.4, 84.3, 89.7]  & [8, 4]         &         12 &       50 \\
- Relu2HiddenLayer & 67.1 &  0.29 &     23.4 & [36.3, 75.7, 42.2, 90.9, 90.3] & [8, 4]         &         12 &      100 \\
+ Tanh1HiddenLayer & 70.5 &  0.26 &      7.1 & [74.0, 67.3, 58.1, 77.3, 75.7] & [15, 5]        &         20 &       90 \\
+ Tanh1HiddenLayer & 58.3 &  0.36 &     23.5 & [85.2, 28.5, 84.6, 37.1, 56.2] & [8, 4]         &         12 &       90 \\
+ Tanh1HiddenLayer & 51.1 &  0.43 &     38.2 & [92.8, 0.2, 27.0, 97.8, 37.5]  & [15, 10, 3]    &         28 &       90 \\
 \hline
 \end{tabular}
 \hline
