--- a/NN/tables/backward.tex
+++ b/NN/tables/backward.tex
@@ -1,25 +1,32 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{p{12cm}r}r}
-\hline
+        \begin{tabular}{lr}
 \hline
  features                                                                                            &    R2 \\
 \hline
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2 & 84.97 \\
- conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 71.27 \\
- flow\_rate1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 71.9  \\
- flow\_rate1,conc\_nano1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2         & 73.44 \\
- flow\_rate1,conc\_nano1,Kfluid1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 74.25 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2       & 70.58 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 81.67 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,Kfluid2,heat\_flux2,X\_D2             & 40.24 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,heat\_flux2,X\_D2         & 49.33 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,X\_D2             & 72.42 \\
- flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2       & 74.5  \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2 & 62.49 \\
+ conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 68.28 \\
+ flow\_rate1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 81.17 \\
+ flow\_rate1,conc\_nano1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2         & 71.83 \\
+ flow\_rate1,conc\_nano1,Kfluid1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 69.8  \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2,X\_D2       & 64.05 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2             & 88.72 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,Kfluid2,heat\_flux2,X\_D2             & 69.93 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,heat\_flux2,X\_D2         & 46.61 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,X\_D2             & 56.93 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,flow\_rate2,conc\_nano2,Kfluid2,heat\_flux2       & 68.77 \\
+ conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2                         & 70.72 \\
+ flow\_rate1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2                         & 81.63 \\
+ flow\_rate1,conc\_nano1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2                     & 87.88 \\
+ flow\_rate1,conc\_nano1,Kfluid1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2                         & 80.33 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,conc\_nano2,Kfluid2,heat\_flux2,X\_D2                   & 84.17 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,Kfluid2,heat\_flux2,X\_D2                         & 81.33 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,heat\_flux2,X\_D2                     & 26.72 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,X\_D2                         & 61.71 \\
+ flow\_rate1,conc\_nano1,Kfluid1,heat\_flux1,X\_D1,conc\_nano2,Kfluid2,heat\_flux2                   & 76.7  \\
 \hline
 \end{tabular}
-\hline
         \caption{Results of Backward Feature Elimination}
         \label{backward}
     \end{table*}
