--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,17 +1,24 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{p{12cm}r}rrrllrr}
+        \begin{tabular}{lrrrlrr}
 \hline
+ model            &   R2 &   MSE &   R2 std & hidden sizes   &   total hs &   epochs \\
 \hline
- model            &   R2 &   MSE &   R2 std & R2 List:                       & hidden sizes   &   total hs &   epochs \\
-\hline
- Tanh1HiddenLayer & 70.5 &  0.26 &      7.1 & [74.0, 67.3, 58.1, 77.3, 75.7] & [15, 5]        &         20 &       90 \\
- Tanh1HiddenLayer & 58.3 &  0.36 &     23.5 & [85.2, 28.5, 84.6, 37.1, 56.2] & [8, 4]         &         12 &       90 \\
- Tanh1HiddenLayer & 51.1 &  0.43 &     38.2 & [92.8, 0.2, 27.0, 97.8, 37.5]  & [15, 10, 3]    &         28 &       90 \\
+ Tanh2HiddenLayer & 85.7 &  0.13 &     10   & \[15, 5\]      &         20 &       20 \\
+ Tanh2HiddenLayer & 78.2 &  0.19 &     16.7 & \[15, 10, 3\]  &         28 &      200 \\
+ Tanh2HiddenLayer & 76.1 &  0.21 &     22.5 & \[8, 4\]       &         12 &       50 \\
+ Tanh2HiddenLayer & 71.8 &  0.25 &      3.1 & \[8, 4\]       &         12 &       20 \\
+ Tanh2HiddenLayer & 71.2 &  0.25 &     15.9 & \[15, 10, 3\]  &         28 &      100 \\
+ Tanh2HiddenLayer & 69.4 &  0.27 &     21.5 & \[15, 10, 3\]  &         28 &       50 \\
+ Tanh2HiddenLayer & 66.8 &  0.29 &     36.6 & \[15, 5\]      &         20 &      200 \\
+ Tanh2HiddenLayer & 60.1 &  0.35 &     24.5 & \[8, 4\]       &         12 &      200 \\
+ Tanh2HiddenLayer & 57.8 &  0.37 &     33   & \[15, 10, 3\]  &         28 &       20 \\
+ Tanh2HiddenLayer & 57.2 &  0.37 &     52.5 & \[15, 5\]      &         20 &       50 \\
+ Tanh2HiddenLayer & 53.5 &  0.41 &     28.6 & \[15, 5\]      &         20 &      100 \\
+ Tanh2HiddenLayer & 49.6 &  0.44 &     55.5 & \[8, 4\]       &         12 &      100 \\
 \hline
 \end{tabular}
-\hline
         \caption{Results of different models}
         \label{models}
     \end{table*}
