--- a/NN/tables/weight-analysis.tex
+++ b/NN/tables/weight-analysis.tex
@@ -1,24 +1,21 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{p{12cm}r}r}
-\hline
+        \begin{tabular}{lr}
 \hline
  Feature     &   Weight Importance \\
 \hline
- conc\_nano2 &            0.543742 \\
- conc\_nano1 &            0.488296 \\
- flow\_rate1 &            0.482093 \\
- Kfluid2     &            0.460234 \\
- heat\_flux1 &            0.434018 \\
- flow\_rate2 &            0.417029 \\
- heat\_flux2 &            0.416402 \\
- X\_D2       &            0.397723 \\
- Kfluid1     &            0.381592 \\
- X\_D1       &            0.322065 \\
+ X\_D2       &            0.681455 \\
+ X\_D1       &            0.617036 \\
+ heat\_flux2 &            0.613336 \\
+ heat\_flux1 &            0.612263 \\
+ Kfluid2     &            0.512448 \\
+ conc\_nano2 &            0.490265 \\
+ flow\_rate1 &            0.426227 \\
+ Kfluid1     &            0.419663 \\
+ conc\_nano1 &            0.390698 \\
 \hline
 \end{tabular}
-\hline
         \caption{Results of Weight Analysis}
         \label{weight_analysis}
     \end{table*}
