--- a/NN/tables/forward.tex
+++ b/NN/tables/forward.tex
@@ -3,48 +3,48 @@
         \centering
         \begin{tabular}{lr}
 \hline
- features                                                      &    R2 \\
+ features                                                             &    R2 \\
 \hline
- X\_D1                                                         & 15.01 \\
- flow\_rate2                                                   & 34.3  \\
- conc\_nano2                                                   & 10.78 \\
- Kfluid2                                                       & 49.29 \\
- heat\_flux2                                                   & -8.26 \\
- flow\_rate1,Kfluid2                                           & 52.94 \\
- conc\_nano1,Kfluid2                                           & 50.8  \\
- Kfluid1,Kfluid2                                               & 47.57 \\
- heat\_flux1,Kfluid2                                           & 52.31 \\
- X\_D1,Kfluid2                                                 & 62.32 \\
- flow\_rate2,Kfluid2                                           & 29.14 \\
- conc\_nano2,Kfluid2                                           & 61.05 \\
- heat\_flux2,Kfluid2                                           & 66.61 \\
- X\_D2,Kfluid2                                                 & 53.44 \\
- flow\_rate1,Kfluid2,heat\_flux2                               & 60.58 \\
- conc\_nano1,Kfluid2,heat\_flux2                               & 61.96 \\
- Kfluid1,Kfluid2,heat\_flux2                                   & 66.64 \\
- heat\_flux1,Kfluid2,heat\_flux2                               & 42.41 \\
- X\_D1,Kfluid2,heat\_flux2                                     & 66.55 \\
- flow\_rate2,Kfluid2,heat\_flux2                               & 55.24 \\
- conc\_nano2,Kfluid2,heat\_flux2                               & 67.09 \\
- X\_D2,Kfluid2,heat\_flux2                                     & 68.58 \\
- flow\_rate1,Kfluid2,heat\_flux2,X\_D2                         & 90.12 \\
- conc\_nano1,Kfluid2,heat\_flux2,X\_D2                         & 78.64 \\
- Kfluid1,Kfluid2,heat\_flux2,X\_D2                             & 88.23 \\
- heat\_flux1,Kfluid2,heat\_flux2,X\_D2                         & 49.47 \\
- X\_D1,Kfluid2,heat\_flux2,X\_D2                               & 79.9  \\
- flow\_rate2,Kfluid2,heat\_flux2,X\_D2                         & -0.88 \\
- conc\_nano2,Kfluid2,heat\_flux2,X\_D2                         & 63.17 \\
- conc\_nano1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1             & 95.97 \\
- Kfluid1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1                 & 76.54 \\
- heat\_flux1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1             & 60.12 \\
- X\_D1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1                   & 80.67 \\
- flow\_rate2,Kfluid2,heat\_flux2,X\_D2,flow\_rate1             & 68.87 \\
- conc\_nano2,Kfluid2,heat\_flux2,X\_D2,flow\_rate1             & 68.35 \\
- Kfluid1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1,conc\_nano1     & 80.62 \\
- heat\_flux1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1,conc\_nano1 & 67.03 \\
- X\_D1,Kfluid2,heat\_flux2,X\_D2,flow\_rate1,conc\_nano1       & 85.73 \\
- flow\_rate2,Kfluid2,heat\_flux2,X\_D2,flow\_rate1,conc\_nano1 & 75.7  \\
- conc\_nano2,Kfluid2,heat\_flux2,X\_D2,flow\_rate1,conc\_nano1 & 78.99 \\
+ X\_D1                                                                & 14.85 \\
+ flow\_rate2                                                          & 27.69 \\
+ conc\_nano2                                                          & 11.15 \\
+ Kfluid2                                                              & 62.66 \\
+ heat\_flux2                                                          & -4.92 \\
+ flow\_rate1, Kfluid2                                                 & 75.33 \\
+ conc\_nano1, Kfluid2                                                 & 64.49 \\
+ Kfluid1, Kfluid2                                                     & 67.9  \\
+ heat\_flux1, Kfluid2                                                 & 74.3  \\
+ X\_D1, Kfluid2                                                       & 67.3  \\
+ flow\_rate2, Kfluid2                                                 &  9.94 \\
+ conc\_nano2, Kfluid2                                                 & 87.59 \\
+ heat\_flux2, Kfluid2                                                 & 56.8  \\
+ X\_D2, Kfluid2                                                       & 67.59 \\
+ flow\_rate1, Kfluid2, conc\_nano2                                    & 60.42 \\
+ conc\_nano1, Kfluid2, conc\_nano2                                    & 78.36 \\
+ Kfluid1, Kfluid2, conc\_nano2                                        & 79.88 \\
+ heat\_flux1, Kfluid2, conc\_nano2                                    & 90.37 \\
+ X\_D1, Kfluid2, conc\_nano2                                          & 84.51 \\
+ flow\_rate2, Kfluid2, conc\_nano2                                    & 65.14 \\
+ heat\_flux2, Kfluid2, conc\_nano2                                    & 57.1  \\
+ X\_D2, Kfluid2, conc\_nano2                                          & 54.6  \\
+ flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1                       & 62.62 \\
+ conc\_nano1, Kfluid2, conc\_nano2, heat\_flux1                       & 92.87 \\
+ Kfluid1, Kfluid2, conc\_nano2, heat\_flux1                           & 80.94 \\
+ X\_D1, Kfluid2, conc\_nano2, heat\_flux1                             & 87.63 \\
+ flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1                       & 82.76 \\
+ heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1                       & 55.75 \\
+ X\_D2, Kfluid2, conc\_nano2, heat\_flux1                             & 75.43 \\
+ flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 49.56 \\
+ Kfluid1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1              & 93.06 \\
+ X\_D1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1                & 87.49 \\
+ flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 69.35 \\
+ heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1          & 65.5  \\
+ X\_D2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1                & 64.18 \\
+ flow\_rate1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 84.19 \\
+ X\_D1, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1       & 87.54 \\
+ flow\_rate2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 76.61 \\
+ heat\_flux2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1 & 71.81 \\
+ X\_D2, Kfluid2, conc\_nano2, heat\_flux1, conc\_nano1, Kfluid1       & 77.34 \\
 \hline
 \end{tabular}
         \caption{Results of Forward Feature Selection for different features}
