--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -5,18 +5,18 @@
 \hline
  model            &   R2 &   MSE &   R2 std & hidden sizes   &   total hs &   epochs \\
 \hline
- Tanh2HiddenLayer & 85.7 &  0.13 &     10   & \[15, 5\]      &         20 &       20 \\
- Tanh2HiddenLayer & 78.2 &  0.19 &     16.7 & \[15, 10, 3\]  &         28 &      200 \\
- Tanh2HiddenLayer & 76.1 &  0.21 &     22.5 & \[8, 4\]       &         12 &       50 \\
- Tanh2HiddenLayer & 71.8 &  0.25 &      3.1 & \[8, 4\]       &         12 &       20 \\
- Tanh2HiddenLayer & 71.2 &  0.25 &     15.9 & \[15, 10, 3\]  &         28 &      100 \\
- Tanh2HiddenLayer & 69.4 &  0.27 &     21.5 & \[15, 10, 3\]  &         28 &       50 \\
- Tanh2HiddenLayer & 66.8 &  0.29 &     36.6 & \[15, 5\]      &         20 &      200 \\
- Tanh2HiddenLayer & 60.1 &  0.35 &     24.5 & \[8, 4\]       &         12 &      200 \\
- Tanh2HiddenLayer & 57.8 &  0.37 &     33   & \[15, 10, 3\]  &         28 &       20 \\
- Tanh2HiddenLayer & 57.2 &  0.37 &     52.5 & \[15, 5\]      &         20 &       50 \\
- Tanh2HiddenLayer & 53.5 &  0.41 &     28.6 & \[15, 5\]      &         20 &      100 \\
- Tanh2HiddenLayer & 49.6 &  0.44 &     55.5 & \[8, 4\]       &         12 &      100 \\
+ Relu2HiddenLayer & 90.6 &  0.08 &      9.9 & [15, 10, 3]    &         28 &       50 \\
+ Relu2HiddenLayer & 86.3 &  0.12 &      6.4 & [15, 10, 3]    &         28 &      200 \\
+ Relu2HiddenLayer & 85.8 &  0.12 &      4.9 & [15, 10, 3]    &         28 &      100 \\
+ Relu2HiddenLayer & 84.3 &  0.14 &     10.5 & [8, 4]         &         12 &      200 \\
+ Relu2HiddenLayer & 83.6 &  0.14 &      5.1 & [15, 5]        &         20 &      200 \\
+ Relu2HiddenLayer & 81.7 &  0.16 &     11.5 & [15, 5]        &         20 &      100 \\
+ Relu2HiddenLayer & 78.5 &  0.19 &     14.6 & [8, 4]         &         12 &       20 \\
+ Relu2HiddenLayer & 77.2 &  0.2  &     15.2 & [15, 10, 3]    &         28 &       20 \\
+ Relu2HiddenLayer & 73.6 &  0.23 &     29.8 & [15, 5]        &         20 &       50 \\
+ Relu2HiddenLayer & 68.5 &  0.28 &     22.6 & [15, 5]        &         20 &       20 \\
+ Relu2HiddenLayer & 67.9 &  0.28 &     34.1 & [8, 4]         &         12 &       50 \\
+ Relu2HiddenLayer & 67.1 &  0.29 &     23.4 & [8, 4]         &         12 &      100 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
