--- a/NN/view.tex
+++ b/NN/view.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage[a4paper, margin=0.3in]{geometry}  % Set custom margins here
 \usepackage{multirow}
 \usepackage{makecell}
 \usepackage{booktabs}
