--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -1,7 +1,7 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{p{12cm}r}rr}
+        \begin{tabular}{p{12cm}rrr}
 \hline
 \hline
  Feature     &   Sensitivity &   Variance \\
@@ -18,7 +18,7 @@
  conc\_nano2 &     -11.9773  &    43.7778 \\
 \hline
 \end{tabular}
-\hline
+
         \caption{Results of Jackknife Sensitivity Analysis}
         \label{jackknife}
     \end{table*}
