--- a/NN/view.tex
+++ b/NN/view.tex
@@ -12,9 +12,9 @@
 \subsection{Backward Feature Selection}
 \input{tables/backward}	
 \subsection{Forward Feature Selection}
-%\input{tabels/forward}
+\input{tables/forward}
 \subsection{Weight Analysis}
-%\input{tabels/weight-analysis}
+\input{tables/weight-analysis}
 \subsection{Jackknife Sensitivity Analysis}
-%\input{tabels/jackknife}
+\input{tables/jackknife}
 \end{document}
