--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,22 +1,34 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{lrrrlrr}
+        \begin{tabular}{lrrrlrrl}
 \hline
- model                              &   R2 &   MSE &   R2 std & hidden sizes   &   total hs &   epochs \\
+ model                             &   R2 &   MSE &   R2 std & hidden sizes   &   total hs &   epochs & R2 mean     \\
 \hline
- \multirow{12}{*}{Relu2HiddenLayer} & 96.2 &  0.03 &      1.6 & [15, 5]        &         20 &      100 \\
-                                    & 94   &  0.05 &      4.7 & [8, 4]         &         12 &       50 \\
-                                    & 91.7 &  0.07 &      5.1 & [8, 4]         &         12 &       20 \\
-                                    & 91.4 &  0.07 &      1.9 & [8, 4]         &         12 &      200 \\
-                                    & 90.1 &  0.09 &      0.9 & [15, 10, 3]    &         28 &       20 \\
-                                    & 87.5 &  0.11 &      8.3 & [15, 10, 3]    &         28 &      200 \\
-                                    & 84.8 &  0.13 &      2   & [15, 5]        &         20 &       50 \\
-                                    & 81.9 &  0.16 &      4.9 & [15, 10, 3]    &         28 &       50 \\
-                                    & 81.2 &  0.16 &      6.6 & [15, 5]        &         20 &      200 \\
-                                    & 80.7 &  0.17 &      0.3 & [15, 10, 3]    &         28 &      100 \\
-                                    & 68.7 &  0.27 &      2.3 & [8, 4]         &         12 &      100 \\
-                                    & 65.3 &  0.3  &      3.4 & [15, 5]        &         20 &       20 \\
+ \multirow{2}{*}{Relu1HiddenLayer} & 87.9 &  0.11 &     11.9 & [15, 5]        &         20 &      200 & 87.9 ± 11.9 \\
+                                   & 85.8 &  0.12 &      9.1 & [8, 4]         &         12 &       50 & 85.8 ± 9.1  \\
+ Tanh2HiddenLayer                  & 85.7 &  0.13 &     10   & [15, 5]        &         20 &       20 & 85.7 ± 10.0 \\
+ \multirow{6}{*}{Relu1HiddenLayer} & 84.7 &  0.13 &      8.1 & [15, 5]        &         20 &       50 & 84.7 ± 8.1  \\
+                                   & 84.4 &  0.14 &      7.6 & [15, 10, 3]    &         28 &      200 & 84.4 ± 7.6  \\
+                                   & 80.4 &  0.17 &     12.4 & [15, 10, 3]    &         28 &       50 & 80.4 ± 12.4 \\
+                                   & 80   &  0.18 &     14.4 & [8, 4]         &         12 &      100 & 80.0 ± 14.4 \\
+                                   & 79.5 &  0.18 &      7.2 & [15, 5]        &         20 &       20 & 79.5 ± 7.2  \\
+                                   & 79.1 &  0.18 &      9.8 & [15, 10, 3]    &         28 &      100 & 79.1 ± 9.8  \\
+ Tanh2HiddenLayer                  & 78.2 &  0.19 &     16.7 & [15, 10, 3]    &         28 &      200 & 78.2 ± 16.7 \\
+ Relu1HiddenLayer                  & 76.3 &  0.21 &      9.7 & [15, 10, 3]    &         28 &       20 & 76.3 ± 9.7  \\
+ \multirow{5}{*}{Tanh2HiddenLayer} & 76.1 &  0.21 &     22.5 & [8, 4]         &         12 &       50 & 76.1 ± 22.5 \\
+                                   & 71.8 &  0.25 &      3.1 & [8, 4]         &         12 &       20 & 71.8 ± 3.1  \\
+                                   & 71.2 &  0.25 &     15.9 & [15, 10, 3]    &         28 &      100 & 71.2 ± 15.9 \\
+                                   & 69.4 &  0.27 &     21.5 & [15, 10, 3]    &         28 &       50 & 69.4 ± 21.5 \\
+                                   & 66.8 &  0.29 &     36.6 & [15, 5]        &         20 &      200 & 66.8 ± 36.6 \\
+ \multirow{2}{*}{Relu1HiddenLayer} & 63.5 &  0.32 &     32.5 & [15, 5]        &         20 &      100 & 63.5 ± 32.5 \\
+                                   & 61.7 &  0.33 &     26.5 & [8, 4]         &         12 &       20 & 61.7 ± 26.5 \\
+ Tanh2HiddenLayer                  & 60.1 &  0.35 &     24.5 & [8, 4]         &         12 &      200 & 60.1 ± 24.5 \\
+ Relu1HiddenLayer                  & 58.6 &  0.36 &     28.1 & [8, 4]         &         12 &      200 & 58.6 ± 28.1 \\
+ \multirow{4}{*}{Tanh2HiddenLayer} & 57.8 &  0.37 &     33   & [15, 10, 3]    &         28 &       20 & 57.8 ± 33.0 \\
+                                   & 57.2 &  0.37 &     52.5 & [15, 5]        &         20 &       50 & 57.2 ± 52.5 \\
+                                   & 53.5 &  0.41 &     28.6 & [15, 5]        &         20 &      100 & 53.5 ± 28.6 \\
+                                   & 49.6 &  0.44 &     55.5 & [8, 4]         &         12 &      100 & 49.6 ± 55.5 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
