--- a/NN/tables/jackknife.tex
+++ b/NN/tables/jackknife.tex
@@ -1,24 +1,22 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{p{12cm}rrr}
-\hline
+        \begin{tabular}{lrr}
 \hline
  Feature     &   Sensitivity &   Variance \\
 \hline
- Kfluid2     &      16.7308  &   149.29   \\
- heat\_flux2 &      11.0725  &   134.77   \\
- X\_D1       &      10.0772  &   645.93   \\
- flow\_rate2 &       4.83764 &   792.954  \\
- X\_D2       &       3.97001 &   194.98   \\
- flow\_rate1 &       1.0037  &   874.711  \\
- Kfluid1     &      -0.31073 &   554.655  \\
- conc\_nano1 &      -5.82048 &   116.927  \\
- heat\_flux1 &      -8.58076 &   242.628  \\
- conc\_nano2 &     -11.9773  &    43.7778 \\
+ Kfluid2     &       4.82179 &   401.356  \\
+ heat\_flux2 &       3.89074 &   224.65   \\
+ X\_D1       &      -1.47476 &   501.868  \\
+ X\_D2       &      -1.64904 &   234.985  \\
+ Kfluid1     &      -7.38787 &   462.004  \\
+ flow\_rate1 &     -11.5723  &   420.514  \\
+ flow\_rate2 &     -17.386   &   165.634  \\
+ conc\_nano1 &     -19.2583  &   623.708  \\
+ conc\_nano2 &     -23.7143  &    34.6234 \\
+ heat\_flux1 &     -25.1771  &   106.623  \\
 \hline
 \end{tabular}
-
         \caption{Results of Jackknife Sensitivity Analysis}
         \label{jackknife}
     \end{table*}
