--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,34 +1,34 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{lrrrlrrl}
+        \begin{tabular}{llrlrr}
 \hline
- model                             &   R2 &   MSE &   R2 std & hidden sizes   &   total hs &   epochs & R2 mean     \\
+ model                             & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
- \multirow{2}{*}{Relu1HiddenLayer} & 87.9 &  0.11 &     11.9 & [15, 5]        &         20 &      200 & 87.9 ± 11.9 \\
-                                   & 85.8 &  0.12 &      9.1 & [8, 4]         &         12 &       50 & 85.8 ± 9.1  \\
- Tanh2HiddenLayer                  & 85.7 &  0.13 &     10   & [15, 5]        &         20 &       20 & 85.7 ± 10.0 \\
- \multirow{6}{*}{Relu1HiddenLayer} & 84.7 &  0.13 &      8.1 & [15, 5]        &         20 &       50 & 84.7 ± 8.1  \\
-                                   & 84.4 &  0.14 &      7.6 & [15, 10, 3]    &         28 &      200 & 84.4 ± 7.6  \\
-                                   & 80.4 &  0.17 &     12.4 & [15, 10, 3]    &         28 &       50 & 80.4 ± 12.4 \\
-                                   & 80   &  0.18 &     14.4 & [8, 4]         &         12 &      100 & 80.0 ± 14.4 \\
-                                   & 79.5 &  0.18 &      7.2 & [15, 5]        &         20 &       20 & 79.5 ± 7.2  \\
-                                   & 79.1 &  0.18 &      9.8 & [15, 10, 3]    &         28 &      100 & 79.1 ± 9.8  \\
- Tanh2HiddenLayer                  & 78.2 &  0.19 &     16.7 & [15, 10, 3]    &         28 &      200 & 78.2 ± 16.7 \\
- Relu1HiddenLayer                  & 76.3 &  0.21 &      9.7 & [15, 10, 3]    &         28 &       20 & 76.3 ± 9.7  \\
- \multirow{5}{*}{Tanh2HiddenLayer} & 76.1 &  0.21 &     22.5 & [8, 4]         &         12 &       50 & 76.1 ± 22.5 \\
-                                   & 71.8 &  0.25 &      3.1 & [8, 4]         &         12 &       20 & 71.8 ± 3.1  \\
-                                   & 71.2 &  0.25 &     15.9 & [15, 10, 3]    &         28 &      100 & 71.2 ± 15.9 \\
-                                   & 69.4 &  0.27 &     21.5 & [15, 10, 3]    &         28 &       50 & 69.4 ± 21.5 \\
-                                   & 66.8 &  0.29 &     36.6 & [15, 5]        &         20 &      200 & 66.8 ± 36.6 \\
- \multirow{2}{*}{Relu1HiddenLayer} & 63.5 &  0.32 &     32.5 & [15, 5]        &         20 &      100 & 63.5 ± 32.5 \\
-                                   & 61.7 &  0.33 &     26.5 & [8, 4]         &         12 &       20 & 61.7 ± 26.5 \\
- Tanh2HiddenLayer                  & 60.1 &  0.35 &     24.5 & [8, 4]         &         12 &      200 & 60.1 ± 24.5 \\
- Relu1HiddenLayer                  & 58.6 &  0.36 &     28.1 & [8, 4]         &         12 &      200 & 58.6 ± 28.1 \\
- \multirow{4}{*}{Tanh2HiddenLayer} & 57.8 &  0.37 &     33   & [15, 10, 3]    &         28 &       20 & 57.8 ± 33.0 \\
-                                   & 57.2 &  0.37 &     52.5 & [15, 5]        &         20 &       50 & 57.2 ± 52.5 \\
-                                   & 53.5 &  0.41 &     28.6 & [15, 5]        &         20 &      100 & 53.5 ± 28.6 \\
-                                   & 49.6 &  0.44 &     55.5 & [8, 4]         &         12 &      100 & 49.6 ± 55.5 \\
+ Relu2HiddenLayer                  & 96.2 ± 2.8  &  0.03 & [15, 10, 3]    &         28 &      200 \\
+ Tanh2HiddenLayer                  & 95.5 ± 3.4  &  0.04 & [15, 5]        &         20 &       50 \\
+ \multirow{4}{*}{Relu2HiddenLayer} & 91.8 ± 6.4  &  0.07 & [8, 4]         &         12 &       50 \\
+                                   & 89.1 ± 3.4  &  0.09 & [15, 5]        &         20 &      200 \\
+                                   & 87.6 ± 2.5  &  0.11 & [15, 10, 3]    &         28 &       20 \\
+                                   & 86.1 ± 5.9  &  0.12 & [15, 10, 3]    &         28 &       50 \\
+ Tanh2HiddenLayer                  & 84.4 ± 7.2  &  0.14 & [15, 10, 3]    &         28 &       20 \\
+ \multirow{3}{*}{Relu2HiddenLayer} & 83.7 ± 13.9 &  0.14 & [15, 5]        &         20 &      100 \\
+                                   & 82.1 ± 9.8  &  0.16 & [15, 5]        &         20 &       20 \\
+                                   & 82.0 ± 6.8  &  0.16 & [8, 4]         &         12 &      100 \\
+ Tanh2HiddenLayer                  & 79.8 ± 21.7 &  0.18 & [15, 5]        &         20 &      200 \\
+ Relu2HiddenLayer                  & 77.0 ± 19.6 &  0.2  & [15, 10, 3]    &         28 &      100 \\
+ Tanh2HiddenLayer                  & 71.4 ± 17.4 &  0.25 & [15, 10, 3]    &         28 &      200 \\
+ Relu2HiddenLayer                  & 70.2 ± 18.5 &  0.26 & [8, 4]         &         12 &       20 \\
+ Tanh2HiddenLayer                  & 68.4 ± 17.7 &  0.28 & [8, 4]         &         12 &      200 \\
+ \multirow{2}{*}{Relu2HiddenLayer} & 66.3 ± 21.5 &  0.3  & [15, 5]        &         20 &       50 \\
+                                   & 61.0 ± 18.9 &  0.34 & [8, 4]         &         12 &      200 \\
+ \multirow{7}{*}{Tanh2HiddenLayer} & 56.6 ± 16.4 &  0.38 & [15, 5]        &         20 &       20 \\
+                                   & 53.5 ± 43.4 &  0.41 & [15, 5]        &         20 &      100 \\
+                                   & 44.2 ± 27.3 &  0.49 & [8, 4]         &         12 &       50 \\
+                                   & 22.4 ± 72.7 &  0.68 & [8, 4]         &         12 &      100 \\
+                                   & 19.0 ± 63.7 &  0.71 & [15, 10, 3]    &         28 &       50 \\
+                                   & 12.5 ± 44.4 &  0.77 & [8, 4]         &         12 &       20 \\
+                                   & 6.8 ± 53.8  &  0.82 & [15, 10, 3]    &         28 &      100 \\
 \hline
 \end{tabular}
         \caption{Results of different models}
