--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -1,34 +1,40 @@
 
     \begin{table*}
         \centering
-        \begin{tabular}{llrlrr}
+        \begin{tabular}{llllll}
 \hline
- model                             & R2          &   MSE & hidden sizes   &   total hs &   epochs \\
 \hline
- Relu2HiddenLayer                  & 96.2 ± 2.8  &  0.03 & [15, 10, 3]    &         28 &      200 \\
- Tanh2HiddenLayer                  & 95.5 ± 3.4  &  0.04 & [15, 5]        &         20 &       50 \\
- \multirow{4}{*}{Relu2HiddenLayer} & 91.8 ± 6.4  &  0.07 & [8, 4]         &         12 &       50 \\
-                                   & 89.1 ± 3.4  &  0.09 & [15, 5]        &         20 &      200 \\
-                                   & 87.6 ± 2.5  &  0.11 & [15, 10, 3]    &         28 &       20 \\
-                                   & 86.1 ± 5.9  &  0.12 & [15, 10, 3]    &         28 &       50 \\
- Tanh2HiddenLayer                  & 84.4 ± 7.2  &  0.14 & [15, 10, 3]    &         28 &       20 \\
- \multirow{3}{*}{Relu2HiddenLayer} & 83.7 ± 13.9 &  0.14 & [15, 5]        &         20 &      100 \\
-                                   & 82.1 ± 9.8  &  0.16 & [15, 5]        &         20 &       20 \\
-                                   & 82.0 ± 6.8  &  0.16 & [8, 4]         &         12 &      100 \\
- Tanh2HiddenLayer                  & 79.8 ± 21.7 &  0.18 & [15, 5]        &         20 &      200 \\
- Relu2HiddenLayer                  & 77.0 ± 19.6 &  0.2  & [15, 10, 3]    &         28 &      100 \\
- Tanh2HiddenLayer                  & 71.4 ± 17.4 &  0.25 & [15, 10, 3]    &         28 &      200 \\
- Relu2HiddenLayer                  & 70.2 ± 18.5 &  0.26 & [8, 4]         &         12 &       20 \\
- Tanh2HiddenLayer                  & 68.4 ± 17.7 &  0.28 & [8, 4]         &         12 &      200 \\
- \multirow{2}{*}{Relu2HiddenLayer} & 66.3 ± 21.5 &  0.3  & [15, 5]        &         20 &       50 \\
-                                   & 61.0 ± 18.9 &  0.34 & [8, 4]         &         12 &      200 \\
- \multirow{7}{*}{Tanh2HiddenLayer} & 56.6 ± 16.4 &  0.38 & [15, 5]        &         20 &       20 \\
-                                   & 53.5 ± 43.4 &  0.41 & [15, 5]        &         20 &      100 \\
-                                   & 44.2 ± 27.3 &  0.49 & [8, 4]         &         12 &       50 \\
-                                   & 22.4 ± 72.7 &  0.68 & [8, 4]         &         12 &      100 \\
-                                   & 19.0 ± 63.7 &  0.71 & [15, 10, 3]    &         28 &       50 \\
-                                   & 12.5 ± 44.4 &  0.77 & [8, 4]         &         12 &       20 \\
-                                   & 6.8 ± 53.8  &  0.82 & [15, 10, 3]    &         28 &      100 \\
+ model                             & R2          & MSE                 & hidden sizes   & total hs   & epochs   \\
+\hline
+ \multirow{9}{*}{Relu2HiddenLayer} & 90.6 ± 9.9  & 0.07999999821186066 & [15, 10, 3]    & 28         & 50       \\
+ Relu2HiddenLayer                  & 86.3 ± 6.4  & 0.11999999731779099 & [15, 10, 3]    & 28         & 200      \\
+ Relu2HiddenLayer                  & 85.8 ± 4.9  & 0.11999999731779099 & [15, 10, 3]    & 28         & 100      \\
+ Relu2HiddenLayer                  & 84.3 ± 10.5 & 0.14000000059604645 & [8, 4]         & 12         & 200      \\
+ Relu2HiddenLayer                  & 83.6 ± 5.1  & 0.14000000059604645 & [15, 5]        & 20         & 200      \\
+ Relu2HiddenLayer                  & 81.7 ± 11.5 & 0.1599999964237213  & [15, 5]        & 20         & 100      \\
+ Relu2HiddenLayer                  & 78.5 ± 14.6 & 0.1899999976158142  & [8, 4]         & 12         & 20       \\
+ Relu2HiddenLayer                  & 77.2 ± 15.2 & 0.20000000298023224 & [15, 10, 3]    & 28         & 20       \\
+ Relu2HiddenLayer                  & 73.6 ± 29.8 & 0.23000000417232513 & [15, 5]        & 20         & 50       \\
+ \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
+ \multirow{3}{*}{FFNN}             & 70.0 ± 2.5  & 0.25999999046325684 & [15, 10, 3]    & 28         & 50       \\
+ FFNN                              & 69.7 ± 4.9  & 0.27000001072883606 & [15, 10, 3]    & 28         & 200      \\
+ FFNN                              & 69.3 ± 2.7  & 0.27000001072883606 & [15, 5]        & 20         & 200      \\
+ \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
+ \multirow{2}{*}{Relu2HiddenLayer} & 68.5 ± 22.6 & 0.2800000011920929  & [15, 5]        & 20         & 20       \\
+ Relu2HiddenLayer                  & 67.9 ± 34.1 & 0.2800000011920929  & [8, 4]         & 12         & 50       \\
+ \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
+ \multirow{2}{*}{FFNN}             & 67.2 ± 5.5  & 0.28999999165534973 & [15, 10, 3]    & 28         & 100      \\
+ FFNN                              & 67.2 ± 9.0  & 0.28999999165534973 & [8, 4]         & 12         & 100      \\
+ \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
+ Relu2HiddenLayer                  & 67.1 ± 23.4 & 0.28999999165534973 & [8, 4]         & 12         & 100      \\
+ \multirow{7}{*}{FFNN}             & 66.0 ± 8.8  & 0.30000001192092896 & [15, 5]        & 20         & 100      \\
+ FFNN                              & 64.6 ± 7.0  & 0.3100000023841858  & [15, 5]        & 20         & 50       \\
+ FFNN                              & 61.8 ± 12.3 & 0.33000001311302185 & [8, 4]         & 12         & 200      \\
+ FFNN                              & 60.1 ± 11.3 & 0.3499999940395355  & [15, 5]        & 20         & 20       \\
+ FFNN                              & 57.8 ± 7.6  & 0.3700000047683716  & [8, 4]         & 12         & 50       \\
+ FFNN                              & 57.5 ± 6.6  & 0.3700000047683716  & [15, 10, 3]    & 28         & 20       \\
+ FFNN                              & 50.2 ± 14.6 & 0.4399999976158142  & [8, 4]         & 12         & 20       \\
+ \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
 \hline
 \end{tabular}
         \caption{Results of different models}
