--- a/NN/tables/results.tex
+++ b/NN/tables/results.tex
@@ -4,37 +4,40 @@
         \begin{tabular}{llllll}
 \hline
 \hline
- model                             & R2          & MSE                 & hidden sizes   & total hs   & epochs   \\
+ model                               & R2          & MSE                 & hidden sizes   & total hs   & epochs   \\
 \hline
- \multirow{9}{*}{Relu2HiddenLayer} & 90.6 ± 9.9  & 0.07999999821186066 & [15, 10, 3]    & 28         & 50       \\
- Relu2HiddenLayer                  & 86.3 ± 6.4  & 0.11999999731779099 & [15, 10, 3]    & 28         & 200      \\
- Relu2HiddenLayer                  & 85.8 ± 4.9  & 0.11999999731779099 & [15, 10, 3]    & 28         & 100      \\
- Relu2HiddenLayer                  & 84.3 ± 10.5 & 0.14000000059604645 & [8, 4]         & 12         & 200      \\
- Relu2HiddenLayer                  & 83.6 ± 5.1  & 0.14000000059604645 & [15, 5]        & 20         & 200      \\
- Relu2HiddenLayer                  & 81.7 ± 11.5 & 0.1599999964237213  & [15, 5]        & 20         & 100      \\
- Relu2HiddenLayer                  & 78.5 ± 14.6 & 0.1899999976158142  & [8, 4]         & 12         & 20       \\
- Relu2HiddenLayer                  & 77.2 ± 15.2 & 0.20000000298023224 & [15, 10, 3]    & 28         & 20       \\
- Relu2HiddenLayer                  & 73.6 ± 29.8 & 0.23000000417232513 & [15, 5]        & 20         & 50       \\
- \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
- \multirow{3}{*}{FFNN}             & 70.0 ± 2.5  & 0.25999999046325684 & [15, 10, 3]    & 28         & 50       \\
- FFNN                              & 69.7 ± 4.9  & 0.27000001072883606 & [15, 10, 3]    & 28         & 200      \\
- FFNN                              & 69.3 ± 2.7  & 0.27000001072883606 & [15, 5]        & 20         & 200      \\
- \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
- \multirow{2}{*}{Relu2HiddenLayer} & 68.5 ± 22.6 & 0.2800000011920929  & [15, 5]        & 20         & 20       \\
- Relu2HiddenLayer                  & 67.9 ± 34.1 & 0.2800000011920929  & [8, 4]         & 12         & 50       \\
- \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
- \multirow{2}{*}{FFNN}             & 67.2 ± 5.5  & 0.28999999165534973 & [15, 10, 3]    & 28         & 100      \\
- FFNN                              & 67.2 ± 9.0  & 0.28999999165534973 & [8, 4]         & 12         & 100      \\
- \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
- Relu2HiddenLayer                  & 67.1 ± 23.4 & 0.28999999165534973 & [8, 4]         & 12         & 100      \\
- \multirow{7}{*}{FFNN}             & 66.0 ± 8.8  & 0.30000001192092896 & [15, 5]        & 20         & 100      \\
- FFNN                              & 64.6 ± 7.0  & 0.3100000023841858  & [15, 5]        & 20         & 50       \\
- FFNN                              & 61.8 ± 12.3 & 0.33000001311302185 & [8, 4]         & 12         & 200      \\
- FFNN                              & 60.1 ± 11.3 & 0.3499999940395355  & [15, 5]        & 20         & 20       \\
- FFNN                              & 57.8 ± 7.6  & 0.3700000047683716  & [8, 4]         & 12         & 50       \\
- FFNN                              & 57.5 ± 6.6  & 0.3700000047683716  & [15, 10, 3]    & 28         & 20       \\
- FFNN                              & 50.2 ± 14.6 & 0.4399999976158142  & [8, 4]         & 12         & 20       \\
- \hline                            & \hline      & \hline              & \hline         & \hline     & \hline   \\
+ Relu2HiddenLayer                    & 89.8 ± 1.2  & 0.09000000357627869 & [15, 5]        & 20         & 10       \\
+ Relu1HiddenLayer                    & 86.6 ± 3.4  & 0.11999999731779099 & [8, 4]         & 12         & 10       \\
+ GRNN                                & 86.2 ± 6.4  & 0.11999999731779099 & [15, 5]        & 20         & 10       \\
+ Relu1HiddenLayer                    & 83.5 ± 8.9  & 0.14000000059604645 & [15, 10, 3]    & 28         & 10       \\
+ Relu2HiddenLayer                    & 76.7 ± 20.2 & 0.20000000298023224 & [8, 4]         & 12         & 10       \\
+ Tanh2HiddenLayer                    & 75.4 ± 13.4 & 0.2199999988079071  & [8, 4]         & 12         & 10       \\
+ \multirow{2}{*}{GRNN}               & 74.3 ± 6.8  & 0.2199999988079071  & [8, 4]         & 12         & 10       \\
+ GRNN                                & 73.1 ± 20.5 & 0.23999999463558197 & [15, 10, 3]    & 28         & 10       \\
+                                     &             &                     &                &            &          \\
+ FFNN                                & 71.3 ± 0.2  & 0.25                & [15, 5]        & 20         & 10       \\
+ Tanh1HiddenLayer                    & 69.2 ± 4.1  & 0.27000001072883606 & [15, 10, 3]    & 28         & 10       \\
+ Relu1HiddenLayer                    & 67.1 ± 4.8  & 0.28999999165534973 & [15, 5]        & 20         & 10       \\
+ \multirow{2}{*}{Tanh1HiddenLayer}   & 65.6 ± 10.5 & 0.30000001192092896 & [8, 4]         & 12         & 10       \\
+ Tanh1HiddenLayer                    & 61.9 ± 17.7 & 0.33000001311302185 & [15, 5]        & 20         & 10       \\
+                                     &             &                     &                &            &          \\
+ FFNN                                & 60.4 ± 3.9  & 0.3499999940395355  & [8, 4]         & 12         & 10       \\
+ Relu2HiddenLayer                    & 57.8 ± 37.0 & 0.3700000047683716  & [15, 10, 3]    & 28         & 10       \\
+ Linear1HiddenLayer                  & 55.9 ± 12.3 & 0.38999998569488525 & [15, 5]        & 20         & 10       \\
+ \multirow{2}{*}{Tanh2HiddenLayer}   & 55.4 ± 24.3 & 0.38999998569488525 & [15, 10, 3]    & 28         & 10       \\
+ Tanh2HiddenLayer                    & 55.4 ± 26.8 & 0.38999998569488525 & [15, 5]        & 20         & 10       \\
+                                     &             &                     &                &            &          \\
+ Linear1HiddenLayer                  & 54.4 ± 29.7 & 0.4000000059604645  & [15, 10, 3]    & 28         & 10       \\
+ FFNN                                & 54.4 ± 8.4  & 0.4000000059604645  & [15, 10, 3]    & 28         & 10       \\
+ Linear1HiddenLayer                  & 53.6 ± 11.7 & 0.4099999964237213  & [8, 4]         & 12         & 10       \\
+ \multirow{3}{*}{Linear2HiddenLayer} & 40.5 ± 14.4 & 0.5199999809265137  & [15, 5]        & 20         & 10       \\
+ Linear2HiddenLayer                  & 36.4 ± 13.0 & 0.5600000023841858  & [8, 4]         & 12         & 10       \\
+ Linear2HiddenLayer                  & 8.2 ± 16.7  & 0.800000011920929   & [15, 10, 3]    & 28         & 10       \\
+                                     &             &                     &                &            &          \\
+ \multirow{3}{*}{RBFN}               & -0.3 ± 3.1  & 0.8799999952316284  & [15, 5]        & 20         & 10       \\
+ RBFN                                & -1.8 ± 1.8  & 0.8899999856948853  & [8, 4]         & 12         & 10       \\
+ RBFN                                & -5.5 ± 5.0  & 0.9200000166893005  & [15, 10, 3]    & 28         & 10       \\
+                                     &             &                     &                &            &          \\
 \hline
 \end{tabular}
         \caption{Results of different models}
